# VEO-Rust

./: .gitignore  Cargo.toml  README.md
examples/: fractals.rs  many_cubes.rs  message_passing.rs  minimal.rs  octree.rs  simple_system.rs  simple_window.rs  single_cube.rs
examples/gui/: octree_gui.rs
examples/gui/octree_gui/: support.rs
examples/shaders/: test.frag.glsl  test.vert.glsl
examples/shared/: benchmark_system.rs  fps_camera_system.rs  mod.rs
src/: lib.rs
src/core/: entity_manager.rs  input_manager.rs  message_manager.rs  mod.rs  system_manager.rs
src/rendering/: aabb.rs  camera.rs  mesh.rs  mod.rs  octree.rs  renderer.rs
src/rendering/fractal_generators/: mandelbrot.rs  mandelbulb.rs  menger_sponge.rs  midpoint_displacement.rs  mod.rs  sierpinski_pyramid.rs  sierpinski_tetrahedron.rs  sierpinsky_pyramid.rs  sierpinsky_tetrahedron.rs
src/rendering/images/: depth_image.rs  image.rs  mod.rs
src/rendering/nse_gui/: mod.rs  octree_gui.rs
src/rendering/nse_gui/octree_gui/: support.rs
src/rendering/render_passes/: forward_render_pass.rs  mod.rs  shader.rs
src/rendering/render_passes/pipelines/: forward_pipeline.rs  mod.rs  resolve_pipeline.rs
src/rendering/shaders/: forward_pass.frag.glsl  forward_pass.vert.glsl  resolve_pass.frag.glsl  resolve_pass.vert.glsl  test.frag.glsl  test.vert.glsl
src/rendering/utility/: Framebuffer.rs  framebuffer.rs  mod.rs  resources.rs  swapchain.rs  uniform.rs
