[package]
name = "nse"
version = "0.1.0"
authors = ["Wolfgang Rumpler <contact@iflow.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7" # multithreading library
mopa = "0.2.2"
log = "0.4.0"
env_logger = "0.7.1"
bytes = "0.5.4"

winit = { version = "0.21.0", features = ["web-sys"]}

gfx-hal = "0.4.1"
glsl-to-spirv-macros = "0.1.1"
glsl-to-spirv-macros-impl = "0.1.0"
shaderc = "0.6.2"

cgmath = "0.17.0"

glium = "0.26"
imgui = "0.3.0"
imgui-winit-support = "0.3.0"
#imgui-gfx-renderer = "0.3.0"
#imgui-rs-vulkan-renderer = "0.3.0"
imgui-glium-renderer = "0.3.0"
glutin = "0.23.0"

[dependencies.gfx-backend-vulkan]
version = "0.4.2"
features = ["x11"]
optional = true

[dependencies.gfx-backend-gl]
version = "0.4.0"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-empty]
version = "0.4.0"

[features]
vulkan = ["gfx-backend-vulkan"]
gl = ["gfx-backend-gl"]