[package]
name = "nse"
version = "0.1.0"
authors = ["Wolfgang Rumpler <contact@iflow.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7" # multithreading library
mopa = "0.2.2"
env_logger = "0.8.2"
bytes = "1.0.0"
rand = "0.8.1"

winit = { version = "0.24.0", features = ["web-sys"]}

gfx-hal = "0.4.1"
#glsl-to-spirv-macros = "0.1.1"
#glsl-to-spirv-macros-impl = "0.1.0"
shaderc = "0.7.0"

cgmath = "0.18.0"

glium = "0.29"
imgui = "0.6.1"
imgui-winit-support = "0.6.1"
#imgui-gfx-renderer = "0.3.0"
#imgui-rs-vulkan-renderer = "0.3.0"
imgui-glium-renderer = "0.6.1"
glutin = "0.26.0"

[dependencies.gfx-backend-vulkan]
version = "0.4.2"
features = ["x11"]
optional = true

[dependencies.gfx-backend-gl]
version = "0.4.0"
features = ["glutin"]
optional = true

[dependencies.gfx-backend-empty]
version = "0.4.0"

[features]
vulkan = ["gfx-backend-vulkan"]
gl = ["gfx-backend-gl"]