[package]
name = "nse"
version = "0.1.0"
authors = ["Wolfgang Rumpler <contact@iflow.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7" # multithreading library
mopa = "0.2.2"
env_logger = "0.8.2"
bytes = "1.0.0"
rand = "0.8.1"
rayon = "1.5"
async-std = "1.9.0"
riffy = "0.1.1"
num-traits = "0.2"
num-derive = "0.3"
shared_arena = "0.8.4"
rand_seeder = "0.2.2"

winit = { version = "0.24.0" }

gfx-hal = "0.7.0"
gfx-auxil = "0.10.0"
shaderc = "0.7.0"

cgmath = "0.18.0"

glium = "0.29"
imgui = "0.7.0"
imgui-winit-support = "0.7.1"
imgui-glium-renderer = "0.7.0"
glutin = "0.26.0"

[dependencies.gfx-backend-vulkan]
version = "0.7.0"
optional = true

[dependencies.gfx-backend-empty]
version = "0.7.0"

[features]
default = ["vulkan"]
vulkan = ["gfx-backend-vulkan"]